Card alignment fixes

--- a/src/scss/04-layouts/_cards.scss
+++ b/src/scss/04-layouts/_cards.scss
@@ -67,14 +67,13 @@
   }
 
   .link {
-    // display: inline-flex;
-    // flex-direction: column;
-    // align-items: center;
+    display: inline-flex;
+    flex-direction: column;
+    align-items: flex-start;
     a{
       margin: 0.5rem 0 0;
       &.button {
-        text-align: center;
-        display: block;
+        align-self: center;
       }
     }
   }
